# karp3-bot

./: .gitignore  Cargo.toml  _  logs.txt
migrations/: 0001_user_table.sql
src/: .main.rs.rustfmt  lists.rs  main.rs  user.rs
src/commands/: karp_search.rs  mod.rs  numberinput.rs  yum.rs
