[package]
name = "carp3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
chrono = "0.4.22"
rand = "0.8.5"
reqwest = "0.11.11"
search_with_google = "0.5.0"
serenity = {version="0.11"}
serpapi-search-rust = "0.1.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread",] }
