[package]
name = "carp3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
chrono = {version="0.4.22",features=["serde"]}
rand = "0.8.5"
reqwest = "0.11.11"
search_with_google = "0.5.0"
serde_json = "1.0.89"
serenity = {version="0.11",features = ["client", "standard_framework", "voice", "rustls_backend"]}
serpapi-search-rust = "0.1.1"
songbird = "0.3.1"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.16"
sqlx = {version="0.6.3",features=["postgres","runtime-tokio-rustls","chrono","time"]}
